tests/error_display/hll_diagnostics_defer_pre_elab.err.expected
error: at 19:11: [HTC-TypeMismatch] In function 'defer_type_mismatch': type mismatch: expected integer type, found unit
    |
 19 |     defer 42;
    |           ^^
