tests/error_display/hll_diagnostics_defer_pre_elab.si
# Rendered output of MIR-level pre-elaboration diagnostics arising from
# defer constructs. These errors fire after HLL lowering succeeds but
# before NLL elaboration, so they suppress post-elaboration checks.
#
# | fn                  | DiagCode                    |
# |---------------------|-----------------------------|
# | defer_type_mismatch | TC-AssignmentTypeMismatch   |
# | defer_double_drop   | INIT-UseAfterMove           |
# | defer_use_after_move| INIT-UseAfterMove           |

struct Box: Drop + Move { val: i64 }
struct CopyBox: Copy + Drop { val: i64 }

# ---------- TC-AssignmentTypeMismatch: defer body has wrong type ----------

# `defer <expr>` lowers to an assignment whose LHS has type unit; using
# an integer literal produces a type mismatch caught by MIR type-check.
fn defer_type_mismatch() {
    defer 42;
}

# ---------- INIT-UseAfterMove: deferred block moves a value already moved ----------

# The defer block captures `b` by moving it into a local. The subsequent
# `let y = b` is a second move of the same value; init-state catches it.
fn defer_double_drop(b: Box) {
    defer { let x = b; };
    let y = b;
}

# ---------- INIT-UseAfterMove: deferred assignment moves an already-moved value ----------

# The defer body writes `b` through an `&out` pointer; the subsequent
# `let c = b` is another move of the same value.
fn defer_use_after_move(b: CopyBox, out: &out CopyBox) {
    defer out.* = b;
    let c = b;
}
